force-app/main/default/objects/breg_Account_Affiliation__c/breg_Account_Affiliation__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-59</description>
    <label>Account Affiliation</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>Account Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>