force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-59</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Affiliations</relationshipLabel>
    <relationshipName>Account_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>