force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Account_Formation_State__c.field-meta.xml
<CustomField>
    <fullName>breg_Account_Formation_State__c</fullName>
    <description>Aalta BREGMO-407</description>
    <formula>breg_Account__r.breg_Formation_State_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Formation State</label>
    <type>Text</type>
</CustomField>