force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>