force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Address_State_Text__c.field-meta.xml
<CustomField>
    <fullName>breg_Address_State_Text__c</fullName>
    <label>Address State Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>