force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Address_Street_2__c.field-meta.xml
<CustomField>
    <fullName>breg_Address_Street_2__c</fullName>
    <description>Additional Street field for the Address field</description>
    <label>Address Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>