force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Affiliation_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_Affiliation_Address__c</fullName>
    <formula>TRIM(
BLANKVALUE(breg_Address__Street__s, &quot;&quot;) &amp;
IF(
    AND(
        NOT(ISBLANK(breg_Address__Street__s)),
        OR(
            NOT(ISBLANK(breg_Address__City__s)),
            NOT(ISBLANK(TEXT(breg_Address__StateCode__s))),
            NOT(ISBLANK(breg_Address__PostalCode__s)),
            NOT(ISBLANK(TEXT(breg_Address__CountryCode__s)))
        )
    ),
    &quot;, &quot;,
    &quot;&quot;
) &amp;
BLANKVALUE(breg_Address__City__s, &quot;&quot;) &amp;
IF(
    AND(
        NOT(ISBLANK(breg_Address__City__s)),
        OR(
            NOT(ISBLANK(TEXT(breg_Address__StateCode__s))),
            NOT(ISBLANK(breg_Address__PostalCode__s))
        )
    ),
    &quot;, &quot;,
    &quot;&quot;
) &amp;
BLANKVALUE(TEXT(breg_Address__StateCode__s), &quot;&quot;) &amp;
IF(
    AND(
        NOT(ISBLANK(TEXT(breg_Address__StateCode__s))),
        NOT(ISBLANK(breg_Address__PostalCode__s))
    ),
    &quot; &quot;,
    &quot;&quot;
) &amp;
BLANKVALUE(breg_Address__PostalCode__s, &quot;&quot;) &amp;
IF(
    AND(
        OR(
            NOT(ISBLANK(breg_Address__Street__s)),
            NOT(ISBLANK(breg_Address__City__s)),
            NOT(ISBLANK(TEXT(breg_Address__StateCode__s))),
            NOT(ISBLANK(breg_Address__PostalCode__s))
        ),
        NOT(ISBLANK(TEXT(breg_Address__CountryCode__s)))
    ),
    &quot;, &quot;,
    &quot;&quot;
) &amp;
BLANKVALUE(TEXT(breg_Address__CountryCode__s), &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliation Address</label>
    <type>Text</type>
</CustomField>