force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Affiliation_Formula_Street__c.field-meta.xml
<CustomField>
    <fullName>breg_Affiliation_Formula_Street__c</fullName>
    <description>Aalta BREGM-157</description>
    <formula>breg_Address__Street__s &amp;  IF( NOT( ISBLANK( breg_Address_Street_2__c ) ) , &apos; &apos; &amp; breg_Address_Street_2__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliation Street</label>
    <type>Text</type>
</CustomField>