force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Affiliation_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Affiliation_Name__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(
IF(
NOT(ISBLANK(breg_Entity_Name__c)),
breg_Entity_Name__c,
TRIM(
IF(NOT(ISBLANK(breg_Title_Text__c)), breg_Title_Text__c &amp; &quot; &quot;, &quot;&quot;) &amp;
breg_First_Name__c &amp; &quot; &quot; &amp;
IF(NOT(ISBLANK(breg_Middle_Name__c)), breg_Middle_Name__c &amp; &quot; &quot;, &quot;&quot;) &amp;
breg_Last_Name__c &amp;
IF(NOT(ISBLANK(breg_Suffix__c)), &quot; &quot; &amp; breg_Suffix__c, &quot;&quot;)
)
),
&quot;&lt;&quot;, &quot;‹&quot;), &quot;&gt;&quot;, &quot;›&quot;)</formula>
    <label>Affiliation Name</label>
    <type>Text</type>
</CustomField>