force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_As_of_Date__c</fullName>
    <description>Aalta BREG-59</description>
    <label>As of Date</label>
    <type>Date</type>
</CustomField>