force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Bypass_Validation_Token__c.field-meta.xml
<CustomField>
    <fullName>breg_Bypass_Validation_Token__c</fullName>
    <label>Bypass Validation Token</label>
    <type>DateTime</type>
</CustomField>