force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta Breg-59</description>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>BREG Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Account Affiliations</relationshipLabel>
    <relationshipName>Account_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>