force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Contact__c.field-meta.xml
<CustomField>
    <fullName>breg_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta Breg-59</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Affiliations</relationshipLabel>
    <relationshipName>Account_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>