force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_CRA_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_CRA_Address__c</fullName>
    <formula>IF(
  breg_Entity__r.breg_BRIM_CRA_FL__c,
  /* Use Entity Registrant Address */
  IF(NOT(ISBLANK(breg_Entity__r.breg_Registrant_Address__Street__s)), breg_Entity__r.breg_Registrant_Address__Street__s, &quot;&quot;) &amp;
  IF(NOT(ISBLANK(breg_Entity__r.breg_Registrant_Address_Street_2__c)), BR() &amp; breg_Entity__r.breg_Registrant_Address_Street_2__c, &quot;&quot;) &amp;
  IF(
    NOT(ISBLANK(breg_Entity__r.breg_Registrant_Address__City__s)) || NOT(ISBLANK(TEXT(breg_Entity__r.breg_Registrant_Address__StateCode__s))) || NOT(ISBLANK(breg_Entity__r.breg_Registrant_Address__PostalCode__s)),
    BR() &amp; 
    IF(NOT(ISBLANK(breg_Entity__r.breg_Registrant_Address__City__s)), breg_Entity__r.breg_Registrant_Address__City__s, &quot;&quot;) &amp;
    IF(NOT(ISBLANK(TEXT(breg_Entity__r.breg_Registrant_Address__StateCode__s))), &quot;, &quot; &amp; TEXT(breg_Entity__r.breg_Registrant_Address__StateCode__s), &quot;&quot;) &amp;
    IF(NOT(ISBLANK(breg_Entity__r.breg_Registrant_Address__PostalCode__s)), &quot; &quot; &amp; breg_Entity__r.breg_Registrant_Address__PostalCode__s, &quot;&quot;),
    &quot;&quot;
  ) &amp;
  IF(NOT(ISBLANK(TEXT(breg_Entity__r.breg_Registrant_Address__CountryCode__s))), BR() &amp; TEXT(breg_Entity__r.breg_Registrant_Address__CountryCode__s), &quot;&quot;),
  /* Use Account Affiliation Address */
  IF(NOT(ISBLANK(breg_Address__Street__s)), breg_Address__Street__s, &quot;&quot;) &amp;
  IF(NOT(ISBLANK(breg_Address_Street_2__c)), BR() &amp; breg_Address_Street_2__c, &quot;&quot;) &amp;
  IF(
    NOT(ISBLANK(breg_Address__City__s)) || NOT(ISBLANK(TEXT(breg_Address__StateCode__s))) || NOT(ISBLANK(breg_Address__PostalCode__s)),
    BR() &amp;
    IF(NOT(ISBLANK(breg_Address__City__s)), breg_Address__City__s, &quot;&quot;) &amp;
    IF(NOT(ISBLANK(TEXT(breg_Address__StateCode__s))), &quot;, &quot; &amp; TEXT(breg_Address__StateCode__s), &quot;&quot;) &amp;
    IF(NOT(ISBLANK(breg_Address__PostalCode__s)), &quot; &quot; &amp; breg_Address__PostalCode__s, &quot;&quot;),
    &quot;&quot;
  ) &amp;
  IF(NOT(ISBLANK(TEXT(breg_Address__CountryCode__s))), BR() &amp; TEXT(breg_Address__CountryCode__s), &quot;&quot;)
)</formula>
    <label>CRA Address</label>
    <type>Text</type>
</CustomField>