force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Entity__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-1355</description>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Affiliations (Entity)</relationshipLabel>
    <relationshipName>breg_Account_Affiliations_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>