force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Entity_Location__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Location__c</fullName>
    <label>Entity Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>