force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Entity_Location_Country__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Location_Country__c</fullName>
    <description>Aalta BREGMO-407</description>
    <label>Entity Location Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>