force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Name__c</fullName>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>