force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity_Type__c</fullName>
    <description>Aalta BREG-369</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Entity_Type_Codes</valueSetName>
    </valueSet>
</CustomField>