force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_External_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_External_ID__c</fullName>
    <description>External ID for upsert possibility</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>