force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_File__c.field-meta.xml
<CustomField>
    <fullName>breg_File__c</fullName>
    <externalId>true</externalId>
    <label>File #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>