force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Marked_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>breg_Marked_For_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked For Deletion</label>
    <type>Checkbox</type>
</CustomField>