force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>