force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Number_of_shares__c.field-meta.xml
<CustomField>
    <fullName>breg_Number_of_shares__c</fullName>
    <label>Number of shares</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>