force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Office_Held__c.field-meta.xml
<CustomField>
    <fullName>breg_Office_Held__c</fullName>
    <description>Aalta BREG-59</description>
    <label>Office Held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>