force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Officer_Director_Other_Title__c.field-meta.xml
<CustomField>
    <fullName>breg_Officer_Director_Other_Title__c</fullName>
    <label>Officer/Director Other Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>