force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Officer_Director_Titles__c.field-meta.xml
<CustomField>
    <fullName>breg_Officer_Director_Titles__c</fullName>
    <label>Officer/Director Titles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>President</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Vice President</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Secretary</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Treasurer</label>
            </value>
            <value>
                <fullName>CEO</fullName>
                <label>Chief Executive Officer</label>
            </value>
            <value>
                <fullName>CFO</fullName>
                <label>Chief Financial Officer</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Chairperson of the Board</label>
            </value>
            <value>
                <fullName>SRV</fullName>
                <label>Senior Vice President</label>
            </value>
            <value>
                <fullName>EV</fullName>
                <label>Executive Vice President</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>Vice Chairman</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Controller</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Assistant Controller</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>Assistant Secretary</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Assistant Treasurer</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Director</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Trustee</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1V</fullName>
                <label>1st Vice President</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>General Partner</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Limited Partner</label>
            </value>
            <value>
                <fullName>MGR</fullName>
                <label>Manager</label>
            </value>
            <value>
                <fullName>MEM</fullName>
                <label>Member</label>
            </value>
            <value>
                <fullName>Clerk</fullName>
                <label>CL</label>
            </value>
            <value>
                <fullName>SCRIBE</fullName>
            </value>
            <value>
                <fullName>9V</fullName>
                <isActive>false</isActive>
                <label>9V</label>
            </value>
            <value>
                <fullName>R/ AT LARGE</fullName>
                <isActive>false</isActive>
                <label>R/ AT LARGE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>