force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Officer_Director_Titles_Formula__c.field-meta.xml
<CustomField>
    <fullName>breg_Officer_Director_Titles_Formula__c</fullName>
    <description>Allta BREG-2646</description>
    <formula>LEFT(

IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;AC&quot;), &quot;AC/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;AS&quot;), &quot;AS/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;AT&quot;), &quot;AT/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;C&quot;), &quot;C/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;CEO&quot;), &quot;CEO/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;CFO&quot;), &quot;CFO/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;CO&quot;), &quot;CO/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;D&quot;), &quot;D/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;EV&quot;), &quot;EV/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;P&quot;), &quot;P/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;R&quot;), &quot;R/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;S&quot;), &quot;S/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;SRV&quot;), &quot;SRV/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;T&quot;), &quot;T/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;V&quot;), &quot;V/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;VC&quot;), &quot;VC/&quot;, &quot;&quot;) &amp;

IF(
INCLUDES(breg_Officer_Director_Titles__c, &quot;Other&quot;),
IF(ISBLANK(breg_Officer_Director_Other_Title__c), &quot;&quot;, breg_Officer_Director_Other_Title__c &amp; &quot;/&quot;),
&quot;&quot;
),

LEN(

IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;AC&quot;), &quot;AC/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;AS&quot;), &quot;AS/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;AT&quot;), &quot;AT/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;C&quot;), &quot;C/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;CEO&quot;), &quot;CEO/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;CFO&quot;), &quot;CFO/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;CO&quot;), &quot;CO/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;D&quot;), &quot;D/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;EV&quot;), &quot;EV/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;P&quot;), &quot;P/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;R&quot;), &quot;R/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;S&quot;), &quot;S/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;SRV&quot;), &quot;SRV/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;T&quot;), &quot;T/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;V&quot;), &quot;V/&quot;, &quot;&quot;) &amp;
IF(INCLUDES(breg_Officer_Director_Titles__c, &quot;VC&quot;), &quot;VC/&quot;, &quot;&quot;) &amp;

IF(
INCLUDES(breg_Officer_Director_Titles__c, &quot;Other&quot;),
IF(ISBLANK(breg_Officer_Director_Other_Title__c), &quot;&quot;, breg_Officer_Director_Other_Title__c &amp; &quot;/&quot;),
&quot;&quot;
)

) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Officer /DirectorTitles Formula</label>
    <type>Text</type>
</CustomField>