force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Pending_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Pending_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2367</description>
    <label>Pending Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>Account Affiliations (Pending Transaction)</relationshipLabel>
    <relationshipName>Account_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>