force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Person_Flag__c.field-meta.xml
<CustomField>
    <fullName>breg_Person_Flag__c</fullName>
    <description>Aalta BREG-2889</description>
    <formula>NOT(ISBLANK(breg_Contact__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person?</label>
    <type>Checkbox</type>
</CustomField>