force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Person_Sequence__c.field-meta.xml
<CustomField>
    <fullName>breg_Person_Sequence__c</fullName>
    <label>Person Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>