force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Previous_Account_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>breg_Previous_Account_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2367</description>
    <label>Previous Account Affiliation</label>
    <referenceTo>breg_Account_Affiliation__c</referenceTo>
    <relationshipLabel>Account Affiliations</relationshipLabel>
    <relationshipName>breg_Next_Account_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>