force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Role__c.field-meta.xml
<CustomField>
    <fullName>breg_Role__c</fullName>
    <description>Aalta Breg-59</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>New Agent</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Assignor</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>New Applicant</fullName>
            </value>
            <value>
                <fullName>CRA</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>General Partner</fullName>
            </value>
            <value>
                <fullName>Incorporator</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Officer/Director</fullName>
            </value>
            <value>
                <fullName>Organizer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Registrant</fullName>
            </value>
            <value>
                <fullName>Delivery Contact</fullName>
            </value>
            <value>
                <fullName>Transferee</fullName>
            </value>
            <value>
                <fullName>Merging Entity</fullName>
            </value>
            <value>
                <fullName>Surviving Entity</fullName>
            </value>
            <value>
                <fullName>Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>