force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Signature__c.field-meta.xml
<CustomField>
    <fullName>breg_Signature__c</fullName>
    <label>Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>