force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Signed_By_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Signed_By_Last_Name__c</fullName>
    <label>Signed By Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>