force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Start_Date__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>