force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Status__c</fullName>
    <description>Aalta BREG-2367</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>