force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Suffix__c.field-meta.xml
<CustomField>
    <fullName>breg_Suffix__c</fullName>
    <label>breg_Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>