force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Title__c.field-meta.xml
<CustomField>
    <fullName>breg_Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Member_Titles</valueSetName>
    </valueSet>
</CustomField>