force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Title_Text__c.field-meta.xml
<CustomField>
    <fullName>breg_Title_Text__c</fullName>
    <label>Title Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>