force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Titles_Are_Vacant__c.field-meta.xml
<CustomField>
    <fullName>breg_Titles_Are_Vacant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Titles Are Vacant</label>
    <type>Checkbox</type>
</CustomField>